--- a/index.html
+++ b/index.html
@@ -195,6 +195,85 @@ window.addEventListener("resize",()=>{
  camera.updateProjectionMatrix();
  renderer.setSize(innerWidth,innerHeight);
 });
+ /* =======================
+   MODUL RUMAH WARNA & MASUK
+   ======================= */
+
+let houses = [];
+let insideHouse = false;
+let currentHouse = null;
+
+// Hapus bangunan lama kalau ada (opsional)
+// scene.remove(...);
+
+// Warna rumah
+const houseColors = [
+  0xff4d4d,
+  0x4da6ff,
+  0x4dff88,
+  0xffff66,
+  0xff66ff,
+  0xff944d
+];
+
+// Buat kota tanpa lahan kosong (rapat)
+for(let x=-100; x<=100; x+=15){
+  for(let z=-100; z<=100; z+=15){
+
+    const color = houseColors[Math.floor(Math.random()*houseColors.length)];
+    const height = 10 + Math.random()*5;
+
+    const house = new THREE.Mesh(
+      new THREE.BoxGeometry(12,height,12),
+      new THREE.MeshLambertMaterial({color:color})
+    );
+
+    house.position.set(x,height/2,z);
+    scene.add(house);
+
+    houses.push(house);
+  }
+}
+
+// Interior room
+const interior = new THREE.Mesh(
+  new THREE.BoxGeometry(20,12,20),
+  new THREE.MeshLambertMaterial({color:0xffffff, side:THREE.BackSide})
+);
+interior.visible = false;
+scene.add(interior);
+
+// Deteksi masuk rumah
+function checkHouseEnter(){
+  houses.forEach(house=>{
+    const dist = player.position.distanceTo(house.position);
+
+    if(dist < 8 && !insideHouse){
+      if(moveX === 0 && moveZ === 0){
+        insideHouse = true;
+        currentHouse = house;
+
+        interior.position.copy(house.position);
+        interior.visible = true;
+
+        player.position.set(
+          house.position.x,
+          0,
+          house.position.z
+        );
+      }
+    }
+  });
+}
+
+// Keluar rumah jika lompat
+function exitHouse(){
+  if(insideHouse){
+    insideHouse = false;
+    interior.visible = false;
+    player.position.y = 0;
+  }
+}
 </script>
 </body>
 </html>
