--- a/index.html
+++ b/index.html
@@ -1,264 +1,239 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Roblox Mobile City</title>
-<style>
-body { margin:0; overflow:hidden; touch-action:none; }
+/* ===============================
+   EVENT TAHUN BARU IMLEK
+================================= */
 
-#jumpBtn{
- position:fixed;
- right:20px;
- bottom:40px;
- width:70px;
- height:70px;
- border-radius:50%;
- background:red;
- color:white;
- font-size:18px;
- border:none;
+// ===== CEK TANGGAL IMLEK =====
+let isImlek = false;
+
+function checkImlek(){
+    const today = new Date();
+    const year = today.getFullYear();
+
+    // Perkiraan tanggal Imlek 2026-2028
+    const imlekDates = {
+        2026: "2026-02-17",
+        2027: "2027-02-06",
+        2028: "2028-01-26"
+    };
+
+    if(imlekDates[year]){
+        const imlek = new Date(imlekDates[year]);
+        if(
+            today.getDate() === imlek.getDate() &&
+            today.getMonth() === imlek.getMonth()
+        ){
+            isImlek = true;
+        }
+    }
 }
 
-#joystick{
- position:fixed;
- left:30px;
- bottom:40px;
- width:120px;
- height:120px;
- border-radius:50%;
- background:rgba(255,255,255,0.2);
-}
+checkImlek();
 
-#stick{
- position:absolute;
- left:40px;
- top:40px;
- width:40px;
- height:40px;
- border-radius:50%;
- background:white;
-}
-</style>
-</head>
-<body>
+/* ===============================
+   PERLUAS AREA SPAWN
+================================= */
 
-<div id="joystick"><div id="stick"></div></div>
-<button id="jumpBtn">JUMP</button>
-
-<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
-
-<script>
-
-// ===== SCENE =====
-const scene = new THREE.Scene();
-scene.background = new THREE.Color(0x87CEEB);
-
-const camera = new THREE.PerspectiveCamera(75, innerWidth/innerHeight,0.1,2000);
-const renderer = new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(innerWidth, innerHeight);
-document.body.appendChild(renderer.domElement);
-
-scene.add(new THREE.AmbientLight(0xffffff,0.6));
-const light=new THREE.DirectionalLight(0xffffff,1);
-light.position.set(50,100,50);
-scene.add(light);
-
-// ===== GROUND =====
-const ground=new THREE.Mesh(
- new THREE.PlaneGeometry(500,500),
- new THREE.MeshLambertMaterial({color:0x2e8b57})
+const spawnArea = new THREE.Mesh(
+    new THREE.PlaneGeometry(80,80),
+    new THREE.MeshLambertMaterial({color:0x66bb66})
 );
-ground.rotation.x=-Math.PI/2;
-scene.add(ground);
+spawnArea.rotation.x = -Math.PI/2;
+spawnArea.position.set(0, -0.01, 0);
+scene.add(spawnArea);
 
-// ===== PLAYER =====
-const player=new THREE.Group();
 
-const body=new THREE.Mesh(
- new THREE.BoxGeometry(2,3,1.5),
- new THREE.MeshLambertMaterial({color:0x0066ff})
-);
-body.position.y=2;
-player.add(body);
+/* ===============================
+   ATUR ULANG POSISI RUMAH
+================================= */
 
-const head=new THREE.Mesh(
- new THREE.BoxGeometry(1.5,1.5,1.5),
- new THREE.MeshLambertMaterial({color:0xffcc99})
-);
-head.position.y=4;
-player.add(head);
-
-scene.add(player);
-
-// ===== RUMAH WARNA =====
-let houses=[];
-let insideHouse=false;
-
-const colors=[
- 0xff4d4d,0x4da6ff,0x4dff88,
- 0xffff66,0xff66ff,0xff944d
-];
-
-for(let x=-120;x<=120;x+=15){
- for(let z=-120;z<=120;z+=15){
-
-  const house=new THREE.Mesh(
-   new THREE.BoxGeometry(14,12,14),
-   new THREE.MeshLambertMaterial({
-    color:colors[Math.floor(Math.random()*colors.length)]
-   })
-  );
-
-  house.position.set(x,6,z);
-  scene.add(house);
-  houses.push(house);
- }
-}
-
-// ===== INTERIOR =====
-const interior=new THREE.Group();
-interior.visible=false;
-scene.add(interior);
-
-const walls=new THREE.Mesh(
- new THREE.BoxGeometry(20,12,20),
- new THREE.MeshLambertMaterial({
-  color:0xffffff,
-  side:THREE.BackSide
- })
-);
-interior.add(walls);
-
-const floor=new THREE.Mesh(
- new THREE.PlaneGeometry(20,20),
- new THREE.MeshLambertMaterial({color:0xdddddd})
-);
-floor.rotation.x=-Math.PI/2;
-floor.position.y=-6;
-interior.add(floor);
-
-// ===== CONTROL =====
-let velocityY=0;
-let isJump=false;
-let moveX=0,moveZ=0;
-let camAngle=0;
-let camDistance=15;
-
-// Joystick
-const joy=document.getElementById("joystick");
-const stick=document.getElementById("stick");
-
-joy.addEventListener("touchmove",e=>{
- const rect=joy.getBoundingClientRect();
- let x=e.touches[0].clientX-rect.left-60;
- let y=e.touches[0].clientY-rect.top-60;
-
- const max=40;
- x=Math.max(-max,Math.min(max,x));
- y=Math.max(-max,Math.min(max,y));
-
- moveX=x/max;
- moveZ=y/max;
-
- stick.style.left=(x+40)+"px";
- stick.style.top=(y+40)+"px";
+houses.forEach((house,i)=>{
+    house.position.x = (i % 4) * 35 - 60;
+    house.position.z = Math.floor(i/4) * 35 - 60;
 });
 
-joy.addEventListener("touchend",()=>{
- moveX=0; moveZ=0;
- stick.style.left="40px";
- stick.style.top="40px";
-});
 
-// Kamera geser kanan
-let lastX=null;
-window.addEventListener("touchmove",e=>{
- if(e.touches[0].clientX > window.innerWidth/2){
-   if(lastX!==null){
-     camAngle+=(e.touches[0].clientX-lastX)*0.01;
-   }
-   lastX=e.touches[0].clientX;
- }
-});
-window.addEventListener("touchend",()=>{lastX=null;});
+/* ===============================
+   PARKOUR IMLEK
+================================= */
 
-// Jump
-document.getElementById("jumpBtn").onclick=()=>{
- if(!isJump){
-  velocityY=0.35;
-  isJump=true;
- }
+let parkourBlocks = [];
+let parkourFinished = false;
+
+if(isImlek){
+
+    for(let i=0;i<15;i++){
+
+        const block = new THREE.Mesh(
+            new THREE.BoxGeometry(6,2,6),
+            new THREE.MeshLambertMaterial({
+                color: i % 2 === 0 ? 0xff0000 : 0xffd700
+            })
+        );
+
+        block.position.set(
+            10,
+            2 + (i*4),
+            -20 - (i*10)
+        );
+
+        scene.add(block);
+        parkourBlocks.push(block);
+    }
+
+}
+
+
+/* ===============================
+   CEK MENANG PARKOUR
+================================= */
+
+function checkParkourWin(){
+
+    if(!isImlek || parkourFinished) return;
+
+    const lastBlock = parkourBlocks[parkourBlocks.length-1];
+
+    if(lastBlock){
+        const dist = player.position.distanceTo(lastBlock.position);
+
+        if(dist < 5){
+            parkourFinished = true;
+            showAdminEventButton();
+        }
+    }
+}
+
+
+/* ===============================
+   TOMBOL ADMIN EVENT
+================================= */
+
+function showAdminEventButton(){
+
+    if(!isImlek) return;
+
+    const btn = document.createElement("button");
+    btn.innerText = "ADMIN EVENT";
+    btn.style.position = "absolute";
+    btn.style.top = "150px";
+    btn.style.right = "20px";
+    btn.style.padding = "15px";
+    btn.style.background = "gold";
+    btn.style.fontWeight = "bold";
+    btn.style.zIndex = "999";
+
+    btn.onclick = function(){
+        alert("Selamat! Kamu menjadi Admin Event Imlek 🎉");
+        player.material.color.set(0xffd700);
+    }
+
+    document.body.appendChild(btn);
+}
+
+
+/* ===============================
+   UPDATE LOOP TAMBAHAN
+================================= */
+
+const oldAnimate = animate;
+
+animate = function(){
+    oldAnimate();
+    checkParkourWin();
+};/* ===============================
+   EFEK PETASAN IMLEK
+================================= */
+
+let fireworks = [];
+
+function createFirework(x, y, z){
+
+    const particles = [];
+    const particleCount = 80;
+
+    for(let i=0;i<particleCount;i++){
+
+        const geometry = new THREE.SphereGeometry(0.3,8,8);
+        const material = new THREE.MeshBasicMaterial({
+            color: Math.random() > 0.5 ? 0xff0000 : 0xffd700
+        });
+
+        const particle = new THREE.Mesh(geometry, material);
+
+        particle.position.set(x,y,z);
+
+        // arah acak
+        particle.userData.velocity = new THREE.Vector3(
+            (Math.random()-0.5)*2,
+            Math.random()*2,
+            (Math.random()-0.5)*2
+        );
+
+        scene.add(particle);
+        particles.push(particle);
+    }
+
+    fireworks.push(particles);
+}
+
+
+/* ===============================
+   UPDATE PETASAN
+================================= */
+
+function updateFireworks(){
+
+    fireworks.forEach((group,gi)=>{
+        group.forEach((p,pi)=>{
+
+            p.position.add(p.userData.velocity);
+            p.userData.velocity.y -= 0.05;
+
+            // hilangkan kalau jatuh
+            if(p.position.y < 0){
+                scene.remove(p);
+                group.splice(pi,1);
+            }
+
+        });
+    });
+}
+
+
+/* ===============================
+   MODIFIKASI MENANG PARKOUR
+================================= */
+
+// Simpan fungsi lama
+const oldShowAdminEventButton = showAdminEventButton;
+
+showAdminEventButton = function(){
+
+    if(!isImlek) return;
+
+    oldShowAdminEventButton();
+
+    // Mulai petasan langsung
+    for(let i=0;i<5;i++){
+        setTimeout(()=>{
+            createFirework(
+                player.position.x,
+                player.position.y + 15,
+                player.position.z
+            );
+        }, i*600);
+    }
+
 };
 
-// ===== MASUK RUMAH =====
-function checkHouseEnter(){
- houses.forEach(h=>{
-  const dist=player.position.distanceTo(h.position);
-  if(dist<8 && !insideHouse){
-   insideHouse=true;
-   interior.position.copy(h.position);
-   interior.visible=true;
-   velocityY=0;
-   player.position.set(h.position.x,h.position.y-6,h.position.z);
-  }
- });
-}
 
-// ===== KELUAR =====
-function exitHouse(){
- if(insideHouse){
-  insideHouse=false;
-  interior.visible=false;
-  player.position.y=0;
-  velocityY=0;
- }
-}
+/* ===============================
+   TAMBAH KE LOOP ANIMATE
+================================= */
 
-// ===== ANIMATE =====
-function animate(){
- requestAnimationFrame(animate);
+const oldAnimateImlek = animate;
 
- const forward=new THREE.Vector3(Math.sin(camAngle),0,Math.cos(camAngle));
- const right=new THREE.Vector3(forward.z,0,-forward.x);
-
- player.position.add(forward.clone().multiplyScalar(-moveZ*0.5));
- player.position.add(right.clone().multiplyScalar(moveX*0.5));
-
- if(moveX!==0 || moveZ!==0){
-   const angle=Math.atan2(-moveZ,moveX);
-   player.rotation.y=angle-camAngle+Math.PI/2;
- }
-
- if(!insideHouse){
-   player.position.y+=velocityY;
-   velocityY-=0.015;
-   if(player.position.y<=0){
-    player.position.y=0;
-    velocityY=0;
-    isJump=false;
-   }
- }
-
- checkHouseEnter();
-
- if(isJump && insideHouse){
-   exitHouse();
- }
-
- camera.position.x=player.position.x+Math.sin(camAngle)*camDistance;
- camera.position.z=player.position.z+Math.cos(camAngle)*camDistance;
- camera.position.y=8;
- camera.lookAt(player.position);
-
- renderer.render(scene,camera);
-}
-animate();
-
-window.addEventListener("resize",()=>{
- camera.aspect=innerWidth/innerHeight;
- camera.updateProjectionMatrix();
- renderer.setSize(innerWidth,innerHeight);
-});
-</script>
-</body>
-</html>
+animate = function(){
+    oldAnimateImlek();
+    updateFireworks();
+};
