--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Roblox City Imlek Admin Fly</title>
+<title>Event Imlek</title>
 <style>
-body{margin:0;overflow:hidden;touch-action:none;background:black;}
+body{margin:0;overflow:hidden;background:#87ceeb;touch-action:none}
 
 #joystick{
  position:fixed;
@@ -13,7 +13,7 @@ body{margin:0;overflow:hidden;touch-action:none;background:black;}
  width:120px;
  height:120px;
  border-radius:50%;
- background:rgba(255,255,255,0.2);
+ background:rgba(255,255,255,0.3);
 }
 #stick{
  position:absolute;
@@ -37,123 +37,83 @@ body{margin:0;overflow:hidden;touch-action:none;background:black;}
  color:white;
  font-weight:bold;
 }
+
+#adminBtn{
+ position:fixed;
+ top:100px;
+ right:20px;
+ padding:15px;
+ background:gold;
+ color:black;
+ font-weight:bold;
+ display:none;
+}
 </style>
 </head>
 <body>
 
 <div id="joystick"><div id="stick"></div></div>
 <button id="jumpBtn">JUMP</button>
+<button id="adminBtn">ADMIN EVENT IMLEK</button>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
-
 <script>
 
 /* ===============================
-   CEK IMLEK
+   CEK EVENT IMLEK (FEBRUARI)
 ================================= */
 
-let isImlek=false;
-const today=new Date();
-const year=today.getFullYear();
-
-const imlekDates={
- 2026:"2026-02-17",
- 2027:"2027-02-06",
- 2028:"2028-01-26"
-};
-
-if(imlekDates[year]){
- const imlek=new Date(imlekDates[year]);
- if(today.getDate()===imlek.getDate() &&
-    today.getMonth()===imlek.getMonth()){
-   isImlek=true;
- }
-}
+let today = new Date();
+let isImlek = (today.getMonth() === 1); // Februari
 
 /* ===============================
    SCENE
 ================================= */
 
 const scene=new THREE.Scene();
-scene.background=new THREE.Color(0x87CEEB);
-
 const camera=new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,2000);
 const renderer=new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(innerWidth,innerHeight);
 document.body.appendChild(renderer.domElement);
 
-scene.add(new THREE.AmbientLight(0xffffff,0.7));
+scene.add(new THREE.AmbientLight(0xffffff,0.8));
 const light=new THREE.DirectionalLight(0xffffff,1);
 light.position.set(50,100,50);
 scene.add(light);
 
 /* ===============================
-   GROUND + SPAWN
+   GROUND
 ================================= */
 
 const ground=new THREE.Mesh(
- new THREE.PlaneGeometry(500,500),
- new THREE.MeshLambertMaterial({color:0x3cb371})
+ new THREE.PlaneGeometry(400,400),
+ new THREE.MeshLambertMaterial({color:0x228B22})
 );
 ground.rotation.x=-Math.PI/2;
 scene.add(ground);
-
-const spawnArea=new THREE.Mesh(
- new THREE.PlaneGeometry(80,80),
- new THREE.MeshLambertMaterial({color:0x66bb66})
-);
-spawnArea.rotation.x=-Math.PI/2;
-spawnArea.position.y=0.01;
-scene.add(spawnArea);
 
 /* ===============================
    PLAYER
 ================================= */
 
-const player=new THREE.Group();
-
-const body=new THREE.Mesh(
- new THREE.BoxGeometry(2,3,1.5),
+const player=new THREE.Mesh(
+ new THREE.BoxGeometry(2,4,2),
  new THREE.MeshLambertMaterial({color:0x0066ff})
 );
-body.position.y=2;
-player.add(body);
-
-const head=new THREE.Mesh(
- new THREE.BoxGeometry(1.5,1.5,1.5),
- new THREE.MeshLambertMaterial({color:0xffcc99})
-);
-head.position.y=4;
-player.add(head);
-
+player.position.y=2;
 scene.add(player);
 
 let moveX=0,moveZ=0;
 let velocityY=0;
 let isJump=false;
-let isAdmin=false;
-let canFly=false;
 
 /* ===============================
-   RUMAH TIDAK MEPET
+   COLLISION SYSTEM
 ================================= */
 
-for(let x=-150;x<=150;x+=40){
- for(let z=-150;z<=150;z+=40){
-
-  if(Math.abs(x)<50 && Math.abs(z)<50) continue;
-
-  const house=new THREE.Mesh(
-   new THREE.BoxGeometry(20,15,20),
-   new THREE.MeshLambertMaterial({
-    color:Math.random()*0xffffff
-   })
-  );
-
-  house.position.set(x,7.5,z);
-  scene.add(house);
- }
-}
+const playerBox = new THREE.Box3();
+const objectBox = new THREE.Box3();
+let collisionObjects = [];
 
 /* ===============================
    JOYSTICK
@@ -185,16 +145,10 @@ joy.addEventListener("touchend",()=>{
 });
 
 /* ===============================
-   JUMP + ADMIN FLY
+   JUMP
 ================================= */
 
 document.getElementById("jumpBtn").onclick=()=>{
-
- if(isAdmin && canFly){
-  velocityY=0.5;
-  return;
- }
-
  if(!isJump){
   velocityY=0.35;
   isJump=true;
@@ -202,101 +156,75 @@ document.getElementById("jumpBtn").onclick=()=>{
 };
 
 /* ===============================
-   PARKOUR IMLEK
+   EVENT IMLEK
 ================================= */
-
-let parkourBlocks=[];
-let parkourFinished=false;
 
 if(isImlek){
- for(let i=0;i<12;i++){
-  const block=new THREE.Mesh(
-   new THREE.BoxGeometry(6,2,6),
-   new THREE.MeshLambertMaterial({
-    color:i%2==0?0xff0000:0xffd700
-   })
-  );
-  block.position.set(0,2+(i*4),-20-(i*12));
-  scene.add(block);
-  parkourBlocks.push(block);
- }
+
+ // Hapus rumah lama (jika ada sistem rumah)
+ 
+ // Gerbang Imlek
+ const gerbang=new THREE.Mesh(
+  new THREE.BoxGeometry(30,15,2),
+  new THREE.MeshLambertMaterial({color:0xff0000})
+ );
+ gerbang.position.set(0,7,-50);
+ scene.add(gerbang);
+ collisionObjects.push(gerbang);
+
+ // Tiang kiri
+ const tiang1=new THREE.Mesh(
+  new THREE.BoxGeometry(2,15,2),
+  new THREE.MeshLambertMaterial({color:0xffd700})
+ );
+ tiang1.position.set(-14,7,-50);
+ scene.add(tiang1);
+ collisionObjects.push(tiang1);
+
+ // Tiang kanan
+ const tiang2=tiang1.clone();
+ tiang2.position.set(14,7,-50);
+ scene.add(tiang2);
+ collisionObjects.push(tiang2);
+
+ // Angpao tantangan
+ const angpao=new THREE.Mesh(
+  new THREE.BoxGeometry(3,3,1),
+  new THREE.MeshLambertMaterial({color:0xff0000})
+ );
+ angpao.position.set(0,2,-80);
+ scene.add(angpao);
+
 }
 
 /* ===============================
-   FIREWORK
+   MOVEMENT + COLLISION
 ================================= */
 
-let fireworks=[];
+function movePlayer(){
 
-function createFirework(x,y,z){
- const particles=[];
- for(let i=0;i<60;i++){
-  const p=new THREE.Mesh(
-   new THREE.SphereGeometry(0.3,8,8),
-   new THREE.MeshBasicMaterial({
-    color:Math.random()>0.5?0xff0000:0xffd700
-   })
-  );
-  p.position.set(x,y,z);
-  p.userData.velocity=new THREE.Vector3(
-   (Math.random()-0.5)*2,
-   Math.random()*2,
-   (Math.random()-0.5)*2
-  );
-  scene.add(p);
-  particles.push(p);
- }
- fireworks.push(particles);
-}
+ let speed=0.6;
 
-function updateFireworks(){
- fireworks.forEach(group=>{
-  group.forEach(p=>{
-   p.position.add(p.userData.velocity);
-   p.userData.velocity.y-=0.05;
-  });
- });
-}
+ let nextX = player.position.x + moveX * speed;
+ let nextZ = player.position.z + moveZ * speed;
 
-/* ===============================
-   CHECK WIN
-================================= */
+ let oldX = player.position.x;
+ let oldZ = player.position.z;
 
-function checkParkour(){
- if(!isImlek || parkourFinished) return;
+ player.position.x = nextX;
+ player.position.z = nextZ;
 
- const last=parkourBlocks[parkourBlocks.length-1];
- if(!last) return;
+ playerBox.setFromObject(player);
 
- if(player.position.distanceTo(last.position)<5){
-  parkourFinished=true;
-
-  const btn=document.createElement("button");
-  btn.innerText="ADMIN EVENT";
-  btn.style.position="fixed";
-  btn.style.top="100px";
-  btn.style.right="20px";
-  btn.style.padding="15px";
-  btn.style.background="gold";
-  btn.style.fontWeight="bold";
-  document.body.appendChild(btn);
-
-  for(let i=0;i<5;i++){
-   setTimeout(()=>{
-    createFirework(
-     player.position.x,
-     player.position.y+15,
-     player.position.z
-    );
-   },i*500);
+ for(let obj of collisionObjects){
+  objectBox.setFromObject(obj);
+  if(playerBox.intersectsBox(objectBox)){
+   player.position.x = oldX;
+   player.position.z = oldZ;
+   return;
   }
-
-  setTimeout(()=>{
-   isAdmin=true;
-   canFly=true;
-   alert("🔥 MODE ADMIN AKTIF! Kamu bisa terbang!");
-  },3000);
  }
+
 }
 
 /* ===============================
@@ -306,25 +234,25 @@ function checkParkour(){
 function animate(){
  requestAnimationFrame(animate);
 
- player.position.x+=moveX*0.6;
- player.position.z+=moveZ*0.6;
+ movePlayer();
 
  player.position.y+=velocityY;
+ velocityY-=0.015;
 
- if(!(isAdmin && canFly)){
-  velocityY-=0.015;
- }else{
-  velocityY*=0.9;
- }
-
- if(player.position.y<=0){
-  player.position.y=0;
+ if(player.position.y<=2){
+  player.position.y=2;
   velocityY=0;
   isJump=false;
  }
 
- checkParkour();
- updateFireworks();
+ // Cek angpao
+ if(isImlek){
+  const angpao = scene.children.find(o=>o.position.z===-80);
+  if(angpao && player.position.distanceTo(angpao.position)<4){
+   scene.remove(angpao);
+   document.getElementById("adminBtn").style.display="block";
+  }
+ }
 
  camera.position.set(
   player.position.x,
